# h3

./: LICENSE  README.md  default.nix  nixpkgs.json  stack.yaml
docs/: doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-V.html  doc-index-W.html  doc-index.html  index.html
docs/h3-colour-0.0.1/: Data-H3-Colour.html  doc-index.html  h3-colour.haddock  h3-colour.txt  index.html
docs/h3-colour-0.0.1/src/: Data.H3.Colour.html
docs/h3-concur-react-0.0.1/: Data-H3-Concur.html  doc-index.html  h3-concur-react.haddock  h3-concur-react.txt  index.html
docs/h3-concur-react-0.0.1/src/: Data.H3.Concur.html
docs/h3-core-0.0.1/: Data-H3-Charts.html  Data-H3-Extent.html  Data-H3-Scalable.html  Data-H3-Scales.html  Data-H3-Shape.html  Data-H3-Utils.html  Data-H3-Visuals.html  Data-H3.html  doc-index.html  h3-core.haddock  h3-core.txt  index.html
docs/h3-core-0.0.1/src/: Data.H3.Charts.html  Data.H3.Extent.html  Data.H3.Scalable.html  Data.H3.Scales.html  Data.H3.Shape.html  Data.H3.Utils.html  Data.H3.Visuals.html  Data.H3.html
docs/h3-examples-0.0.1/: Data-H3-Examples-BarChart.html  Data-H3-Examples-Map.html  doc-index.html  h3-examples.haddock  h3-examples.txt  index.html
docs/h3-examples-0.0.1/src/: Data.H3.Examples.BarChart.html  Data.H3.Examples.Map.html
docs/h3-geo-0.0.1/: Data-H3-Geo-Projection.html  Data-H3-Geo-Shapefile.html  Data-H3-Geo-Types.html  Data-H3-Geo.html  doc-index.html  h3-geo.haddock  h3-geo.txt  index.html
docs/h3-geo-0.0.1/src/: Data.H3.Geo.Projection.html  Data.H3.Geo.Shapefile.html  Data.H3.Geo.Types.html  Data.H3.Geo.html
docs/h3-svg-0.0.1/: Data-H3-Svg.html  doc-index.html  h3-svg.haddock  h3-svg.txt  index.html
docs/h3-svg-0.0.1/src/: Data.H3.Svg.html
examples/bar-chart/: Main.hs
examples/map/: Main.hs
examples/map/shapefiles/mannheim/: Mannheim.shp  Mannheim.shx
examples/osm/: Main.hs  Overpass.hs  query.overpassql  query.txt
examples/plot/: Main.hs
nix/: IntervalMap.nix  concur-core-ghcjs.nix  concur-core.nix  concur-react-ghcjs.nix  concur-react.nix  ghcjs-base-stub.nix  palette.nix  readshp.nix
src/h3-colour/: default.nix  h3-colour.cabal
src/h3-colour/Data/H3/: Colour.hs
src/h3-concur-react/: default.nix  h3-concur-react.cabal
src/h3-concur-react/Data/H3/: Concur.hs
src/h3-core/: default.nix  h3-core.cabal
src/h3-core/Data/: H3.hs
src/h3-core/Data/H3/: Extent.hs  Invert.hs  Scalable.hs  Scales.hs  Shape.hs  Utils.hs  Visuals.hs
src/h3-examples/: h3-examples.cabal
src/h3-examples/Data/H3/Examples/: BarChart.hs  Map.hs
src/h3-geo/: default.nix  h3-geo.cabal
src/h3-geo/Data/H3/: Geo.hs
src/h3-geo/Data/H3/Geo/: Projection.hs  Shapefile.hs  Types.hs
src/h3-geo/shapefiles/mannheim/: Mannheim.dbf
src/h3-svg/: default.nix  h3-svg.cabal
src/h3-svg/Data/H3/: Svg.hs
