name:          h3-core
version:       0.0.1
category:      Visualisation
license:       MIT
author:        Jann Mueller
maintainer:    Jann Mueler (j.mueller.11@alumni.ucl.ac.uk)
stability:     provisional
homepage:      https://github.com/j-mueller/h3
bug-reports:   https://github.com/j-mueller/h3/issues
copyright:     Copyright (C) 2018 Jann Mueller
build-type:    Simple
cabal-version: >= 1.10
synopsis:      Core library for h3
description:   This package provides the core types for h3

source-repository head
  type: git
  location: git@github.com:j-mueller/h3.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Data.H3,
    Data.H3.Extent,
    Data.H3.Invert,
    Data.H3.Scalable,
    Data.H3.Scales,
    Data.H3.Visuals,
    Data.H3.Utils
  build-depends:
    base,
    containers,
    format-numbers,
    IntervalMap >= 0.6.0.0,
    profunctors,
    semigroups,
    semigroupoids,
    text
