name:          h3-examples
version:       0.0.1
category:      Visualisation
license:       MIT
author:        Jann Mueller
maintainer:    Jann Mueller (j.mueller.11@alumni.ucl.ac.uk)
stability:     provisional
homepage:      https://github.com/j-mueller/h3
bug-reports:   https://github.com/j-mueller/h3/issues
copyright:     Copyright (C) 2018 Jann Mueller
build-type:    Simple
cabal-version: >= 1.10
synopsis:      h3 examples
description:   h3 examples

source-repository head
  type: git
  location: git@github.com:j-mueller/h3.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Data.H3.Examples.BarChart
  build-depends: h3-core, h3-colour, h3-svg
  build-depends:
    base,
    lens,
    semigroupoids,
    svg-builder,
    text
