name:          h3-geo
version:       0.0.1
category:      Visualisation
license:       MIT
author:        Jann Mueller
maintainer:    Jann Mueller (j.mueller.11@alumni.ucl.ac.uk)
stability:     provisional
homepage:      https://github.com/j-mueller/h3
bug-reports:   https://github.com/j-mueller/h3/issues
copyright:     Copyright (C) 2018 Jann Mueller
build-type:    Simple
cabal-version: >= 1.10
synopsis:      Read shapefiles and project geometric shapes with h3
description:   This library implements geometric projects using the 'Data.H3.Scalable.Scalable' type class. Conveniences for reading shapefiles are also provided.

source-repository head
  type: git
  location: git@github.com:j-mueller/h3.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Data.H3.Geo,
    Data.H3.Geo.Projection,
    Data.H3.Geo.Shapefile,
    Data.H3.Geo.Types
  build-depends: h3-core
  build-depends:
    base,
    directory,
    filepath,
    profunctors,
    readshp,
    semigroupoids,
    semigroups
