name:          h3-svg
version:       0.0.1
category:      Visualisation
license:       MIT
author:        Jann Mueller
maintainer:    Jann Mueler (j.mueller.11@alumni.ucl.ac.uk)
stability:     provisional
homepage:      https://github.com/j-mueller/h3
bug-reports:   https://github.com/j-mueller/h3/issues
copyright:     Copyright (C) 2018 Jann Mueller
build-type:    Simple
cabal-version: >= 1.10
synopsis:      svg-builder bindings for h3
description:   Render shapes to SVG

source-repository head
  type: git
  location: git@github.com:j-mueller/h3.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Data.H3.Svg
  build-depends: h3-core
  build-depends:
    base,
    text,
    svg-builder
